--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Metadata -->
+    <meta name="author" content="João Victor Palhares Barbosa Avanzini">
+    <meta name="description" content="M.Sc. student of Deep Learning solutions to Medical data at laboratory REasoning for COmplex Data (Recod.ai). Computer Vision Team Leader at Compass UOL. Particularly interested in Artificial Intelligence for Medical data, Cognitive Computer Solutions, Robotics, Internet of Things (IoT), Autonomous Guided Vehicles, and Chatbots.">
+    <meta name="keywords" content="Artificial Intelligence, Medical data, Cognitive Computer Solutions, Robotics, IoT, Autonomous Guided Vehicles, Chatbots">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="João Victor Palhares Barbosa Avanzini">
+    <meta property="og:description" content="M.Sc. student of Deep Learning solutions to Medical data at laboratory REasoning for COmplex Data (Recod.ai). Computer Vision Team Leader at Compass UOL. Particularly interested in Artificial Intelligence for Medical data, Cognitive Computer Solutions, Robotics, Internet of Things (IoT), Autonomous Guided Vehicles, and Chatbots.">
+    <meta property="og:url" content="https://www.linkedin.com/in/joao-avanzini/">
+    <meta property="og:type" content="profile">
+    <!-- End Metadata -->
+
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
