--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,19 @@
 
     <!-- Metadata -->
     <meta name="author" content="João Victor Palhares Barbosa Avanzini">
-    <meta name="description" content="M.Sc. student of Deep Learning solutions to Medical data at laboratory REasoning for COmplex Data (Recod.ai). Computer Vision Team Leader at Compass UOL. Particularly interested in Artificial Intelligence for Medical data, Cognitive Computer Solutions, Robotics, Internet of Things (IoT), Autonomous Guided Vehicles, and Chatbots.">
-    <meta name="keywords" content="Artificial Intelligence, Medical data, Cognitive Computer Solutions, Robotics, IoT, Autonomous Guided Vehicles, Chatbots">
+    <meta name="description" content="M.Sc. student of Deep Learning solutions to Medical data at laboratory REasoning for COmplex Data (Recod.ai). Computer Vision Team Leader at Compass UOL. Particularly interested in Artificial Intelligence for Medical data, Robotics, Mobile Robotics, Autonomous Guided Vehicles, Robotics in Biomechanics, and Robotic Prostheses.">
+    <meta name="keywords" content="Artificial Intelligence, Medical data, Robotics, Mobile Robotics, Autonomous Guided Vehicles, Robotics in Biomechanics, Robotic Prostheses">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="João Victor Palhares Barbosa Avanzini">
-    <meta property="og:description" content="M.Sc. student of Deep Learning solutions to Medical data at laboratory REasoning for COmplex Data (Recod.ai). Computer Vision Team Leader at Compass UOL. Particularly interested in Artificial Intelligence for Medical data, Cognitive Computer Solutions, Robotics, Internet of Things (IoT), Autonomous Guided Vehicles, and Chatbots.">
-    <meta property="og:url" content="https://www.linkedin.com/in/joao-avanzini/">
+    <meta property="og:description" content="M.Sc. student of Deep Learning solutions to Medical data at laboratory REasoning for COmplex Data (Recod.ai). Computer Vision Team Leader at Compass UOL. Particularly interested in Artificial Intelligence for Medical data, Robotics, Mobile Robotics, Autonomous Guided Vehicles, Robotics in Biomechanics, and Robotic Prostheses.">
+    <meta property="og:url" content="https://palhares.dev">
     <meta property="og:type" content="profile">
+    <meta property="profile:username" content="joaoavanzini">
+    <meta property="profile:nationality" content="Brazilian & Italian">
+    <meta property="profile:mobile" content="+55 19 98103-9387">
+    <meta property="profile:email" content="falejoaovictor@hotmail.com, joao@palhares.dev">
+    <meta property="profile:lattes" content="lattes.cnpq.br/7839491070550503">
+    <meta property="profile:languages" content="Portuguese (Native), English (Fluent)">
     <!-- End Metadata -->
 
 {% seo %}
