--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,26 @@
 
     <!-- Metadata -->
     <meta name="author" content="João Victor Palhares Barbosa Avanzini">
+    <meta name="author" content="João Victor P. B. Avanzini">
+    <meta name="author" content="João V. Palhares B. Avanzini">
+    <meta name="author" content="João V. P. B. Avanzini">
+    <meta name="author" content="J. Victor Palhares B. Avanzini">
+    <meta name="author" content="J. Victor P. B. Avanzini">
+    <meta name="author" content="J. V. Palhares B. Avanzini">
+    <meta name="author" content="J. V. P. B. Avanzini">
+    <meta name="author" content="João Victor P. Avanzini">
+    <meta name="author" content="João V. Palhares Avanzini">
+    <meta name="author" content="João V. P. Avanzini">
+    <meta name="author" content="J. Victor Palhares Avanzini">
+    <meta name="author" content="J. Victor P. Avanzini">
+    <meta name="author" content="J. V. Palhares Avanzini">
+    <meta name="author" content="J. V. P. Avanzini">
+    <meta name="author" content="João V. B. Avanzini">
+    <meta name="author" content="J. V. B. Avanzini">
+    <meta name="author" content="João V. Avanzini">
+    <meta name="author" content="J. V. Avanzini">
+    <meta name="author" content="João Avanzini">
+    <meta name="author" content="J. Avanzini">
     <meta name="description" content="M.Sc. student of Deep Learning solutions to Medical data at laboratory REasoning for COmplex Data (Recod.ai). Computer Vision Team Leader at Compass UOL. Particularly interested in Artificial Intelligence for Medical data, Robotics, Mobile Robotics, Autonomous Guided Vehicles, Robotics in Biomechanics, and Robotic Prostheses.">
     <meta name="keywords" content="Artificial Intelligence, Medical data, Robotics, Mobile Robotics, Autonomous Guided Vehicles, Robotics in Biomechanics, Robotic Prostheses">
     <meta name="robots" content="index, follow">
